# ai-cli-project-template

./: .gitignore  AGENTS.md  LICENSE  README.en.md  README.md  SUPPORT.md  TASKS.md  mkdocs.yml  pyproject.toml
.claude/: settings.json
.claude/commands/: check-conventions.md  test-run.md
.claude/rules/: python-conventions.md
.claude/skills/ml-research/: SKILL.md
.codex/: config.toml
.gemini/commands/: check-conventions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  setup_trouble.yml
configs/: default.yaml
docs/: beginner-guide.en.md  beginner-guide.md  example-agents.md  index.md  instructor-guide.md  recovery.md
docs/reference/: data.md  evaluation.md  main.md  models.md  utils.md
scripts/: check-setup.py  init-project.py
src/: main.py  visualize.py
tests/: test_sample.py
uv_setup/: README.md  install.bat  install.ps1  install.sh  pyproject.toml  start_jupyter.bat  start_jupyter.ps1  start_jupyter.sh
