[project]
name = "ml-env"
version = "0.1.0"
description = "Python Machine Learning Environment with JupyterLab"
requires-python = ">=3.11"
dependencies = [
    # Jupyter
    "jupyterlab>=4.0",
    "ipywidgets>=8.0",
    "ipykernel>=6.0",
    # Data manipulation
    "numpy>=1.26",
    "pandas>=2.0",
    "polars>=0.20",
    # Machine Learning
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    # Deep Learning (CPU)
    "torch>=2.2",
    "torchvision>=0.17",
    # Visualization
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "plotly>=5.18",
    # Utilities
    "tqdm>=4.66",
    "joblib>=1.3",
    "scipy>=1.12",
    # Japanese font support
    "japanize-matplotlib>=1.1",
]

